--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dressing Website</title>
+    <title>Contact Page</title>
     <link rel="stylesheet" href="styles.css"> 
 </head>
 <body>
@@ -14,11 +14,11 @@
        
         <nav>
         <ul class="navigation">
-          <li><a href="file:///C:/Users/Admin/Desktop/Website/index.html">Home</a></li>
-          <li><a href="#About"><span>A</span>bout Us</a></li>
-          <li><a href="#gallery">Gallery</a></li>
-          <li><a href="#Goodwill">Goodwill</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="file:///C:/Users/Admin/Desktop/itassessement2023/index.html">Home</a></li>
+          <li><a href="file:///C:/Users/Admin/Desktop/itassessement2023/about.html"><span>A</span>bout Us</a></li>
+          <li><a href="file:///C:/Users/Admin/Desktop/itassessement2023/gallery.html">Gallery</a></li>
+          <li><a href="file:///C:/Users/Admin/Desktop/itassessement2023/goodwill.html">Goodwill</a></li>
+          <li><a href="file:///C:/Users/Admin/Desktop/itassessement2023/contact.html">Contact</a></li>
         </ul>
       </nav>
         
